[package]
name = "polkadot-availability-store"
description = "Persistent database for parachain data"
version = "0.7.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
parking_lot = "0.9.0"
derive_more = "0.99"
log = "0.4.8"
futures = "0.3.1"
tokio = { version = "0.2.4", features = ["rt-core"] }
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.1.0", features = ["derive"] }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
consensus_common = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "hack" }
client = { package = "sc-client-api", git = "https://github.com/tomaka/polkadot", branch = "hack" }
sc-client = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
keystore = { package = "sc-keystore", git = "https://github.com/tomaka/polkadot", branch = "hack" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
kvdb = "0.3.1"
kvdb-memorydb = "0.3.1"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
kvdb-rocksdb = "0.4.1"
