[package]
name = "polkadot-collator"
version = "0.7.17"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.1"
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
client-api = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.1.22"
futures-timer = "1.0"

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
