[package]
name = "polkadot-collator"
version = "0.7.32-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-client = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "andre/westend-babe-timewarp" }
