[package]
name = "polkadot-primitives"
version = "0.7.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.1.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "hack", default-features = false }
sp-version = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
rstd = { package = "sp-std", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
polkadot-parachain = { path = "../parachain", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
babe = { package = "pallet-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "hack" }

[dev-dependencies]
sp-serializer = { git = "https://github.com/tomaka/polkadot", branch = "hack" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"rstd/std",
	"sp-version/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"bitvec/std",
	"babe/std"
]
