[package]
name = "polkadot-primitives"
version = "0.9.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true , branch = "bkchr-statemine-fix" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
hex-literal = "0.3.1"
parity-util-mem = { version = "0.10.0", default-features = false, optional = true }
thiserror = "1.0.23"

[dev-dependencies]
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
pretty_assertions = "0.7.2"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
