[package]
name = "polkadot-rpc"
version = "0.9.11"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", rev = "9a74d2d54ef3b8cce6539cb82bc1c39c79c9f979", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "jsonrpsee-polkadot-v0.9.11" }
