[package]
name = "polkadot-rpc"
version = "0.9.13"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
