[package]
name = "polkadot-runtime"
version = "0.7.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "md-polkadot-master-traces", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-serializer = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
version = { package = "sp-version", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
tx-pool-api = { package = "sp-transaction-pool-runtime-api", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }

authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
authorship = { package = "pallet-authorship", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
babe = { package = "pallet-babe", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate", default-features = false, features = ["migrate-authorities"], branch = "md-polkadot-master-traces" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
membership = { package = "pallet-membership", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
nicks = { package = "pallet-nicks", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
offences = { package = "pallet-offences", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
session = { package = "pallet-session", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
staking = { package = "pallet-staking", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "md-polkadot-master-traces" }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }
treasury = { package = "pallet-treasury", git = "https://github.com/paritytech/substrate", default-features = false, branch = "md-polkadot-master-traces" }

primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "md-polkadot-master-traces" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "md-polkadot-master-traces" }
trie-db = "0.16.0"
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"rstd/std",
	"sp-io/std",
	"frame-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"session/std",
	"staking/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"randomness-collective-flip/std",
]
