[package]
name = "polkadot-service"
version = "0.7.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
client-api = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
client-db = { package = "sc-client-db", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "andre/polkadot-master-0.7.17" }

[features]
default = ["rocksdb"]
rocksdb = ["service/rocksdb"]
